--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -30,7 +30,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=apt-get install libasound2 alsa-utils sox
+packages=libasound2 alsa-utils sox
 source=http://ftp.us.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
