--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -24,7 +24,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano pstree
+packages=nano 
 source=http://ftp.us.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
