--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets
+debootstrap=Base Net Utils Assets FS
 aptsources=Debian
 cleanup=true
 arch=armhf
@@ -18,19 +18,25 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Net]
-packages=netbase ifupdown iproute net-tools iptables network-manager isc-dhcp-client openssh-client
+packages=netbase ifupdown iproute net-tools iptables network-manager isc-dhcp-client openssh-server wireless-tools ntp
 source=http://ftp.us.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc
+packages=nano psmisc git wget ethtool avahi curl 
+source=http://ftp.us.debian.org/debian
+keyring=debian-archive-keyring
+suite=jessie
+
+[FS]
+packages=nfs-tools samba cifs-utils ntfs-3g dosfstools exfat-utils
 source=http://ftp.us.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils sox
+packages=libasound2 alsa-utils sox avahi sqlite3
 source=http://ftp.us.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
