Added Volumio custom conf files

--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -18,25 +18,25 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Net]
-packages=netbase ifupdown iproute net-tools iptables network-manager isc-dhcp-client openssh-server wireless-tools ntp
+packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools ntp
 source=http://ftp.us.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool avahi curl 
+packages=nano psmisc git wget ethtool curl 
 source=http://ftp.us.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
 [FS]
-packages=nfs-tools samba cifs-utils ntfs-3g dosfstools exfat-utils
+packages=samba cifs-utils ntfs-3g dosfstools exfat-utils
 source=http://ftp.us.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils sox avahi sqlite3
+packages=libasound2 alsa-utils sox sqlite3
 source=http://ftp.us.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
