--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -18,7 +18,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Net]
-packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools ntp
+packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools
 source=http://ftp.us.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
