--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -24,7 +24,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool curl 
+packages=nano psmisc git wget ethtool curl ca-certificates ntp
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
