Adding mpd, systemd, node, USB automount, journal to ram and samba.

--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -36,7 +36,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils sox sqlite3
+packages=libasound2 alsa-utils sox sqlite3 mpd
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
