--- a/volumio/etc/samba/smb.conf
+++ b/volumio/etc/samba/smb.conf
@@ -24,57 +24,68 @@
    directory mask = 0775
    create mask = 0775
 
-[WebRadio]
-   comment = WebRadio Folder
+[Music]
+   comment = Music Folder
    path = /var/lib/mpd/music/WEBRADIO
    read only = no
    public = yes
    follow symlinks = yes
    wide links = yes
 
-[Ramplay]
-   comment = Ramplay (256mb)
-   path = /run/shm
-   read only = no
-   public = yes
-   follow symlinks = yes
-   wide links = yes   
+
+#[WebRadio]
+#   comment = WebRadio Folder
+#   path = /var/lib/mpd/music/WEBRADIO
+#   read only = no
+#   public = yes
+#   follow symlinks = yes
+#   wide links = yes
+
+#[Ramplay]
+#   comment = Ramplay (256mb)
+#   path = /run/shm
+#   read only = no
+#   public = yes
+#   follow symlinks = yes
+#   wide links = yes   
    
-[USB Music]
-   comment = USB stored music library
-   path = /var/lib/mpd/music/USB
-   read only = no
-   public = yes
-   follow symlinks = yes
-   wide links = yes     
+#[USB Music]
+#   comment = USB stored music library
+#   path = /var/lib/mpd/music/USB
+#   read only = no
+#   public = yes
+#   follow symlinks = yes
+#   wide links = yes     
    
-[NAS Music]
-   comment = NAS stored music library
-   path = /var/lib/mpd/music/NAS
-   read only = no
-   public = yes
-   follow symlinks = yes
-   wide links = yes     
+#[NAS Music]
+#   comment = NAS stored music library
+#   path = /var/lib/mpd/music/NAS
+#   read only = no
+#   public = yes
+#   follow symlinks = yes
+#   wide links = yes     
+
+#Development Shares
 #[www]
-#   comment = Webserver root (/var/www)
-#   path = /var/www
-#   read only = no
-#   public = yes
-#   follow symlinks = yes
-#   wide links = yes
+   comment = Node root (/volumio)
+   path = /WebUI-NODE
+   read only = no
+   public = yes
+   follow symlinks = yes
+   wide links = yes
 
-#[etc]
-#   comment = OS Config directory (/etc)
-#   path = /etc
-#   read only = no
-#   public = yes
-#   follow symlinks = yes
-#   wide links = yes
+[etc]
+   comment = OS Config directory (/etc)
+   path = /etc
+   read only = no
+   public = yes
+   follow symlinks = yes
+   wide links = yes
 
-#[mpd]
-#   comment = MPD directory (/var/lib/mpd/)
-#   path = /var/lib/mpd/
-#   read only = no
-#   public = yes
-#   follow symlinks = yes
-#   wide links = yes
+[mpd]
+   comment = MPD directory (/var/lib/mpd/)
+   path = /var/lib/mpd/
+   read only = no
+   public = yes
+   follow symlinks = yes
+   wide links = yes
