--- a/volumio/etc/mpd.conf
+++ b/volumio/etc/mpd.conf
@@ -34,7 +34,7 @@ db_file			"/var/lib/mpd/tag_cache"
 # The special value "syslog" makes MPD use the local syslog daemon. This
 # setting defaults to logging to syslog, otherwise logging is disabled.
 #
-log_file			"/var/log/mpd/mpd.log"
+#log_file			"/var/log/mpd/mpd.log"
 #
 # This setting sets the location of the file which stores the process ID
 # for use of mpd --kill and some init scripts. This setting is disabled by
