--- a/volumio/etc/samba/smb.conf
+++ b/volumio/etc/samba/smb.conf
@@ -24,13 +24,13 @@
    directory mask = 0775
    create mask = 0775
 
-[Music]
-   comment = Music Folder
-   path = /var/lib/mpd/music/WEBRADIO
-   read only = no
-   public = yes
-   follow symlinks = yes
-   wide links = yes
+#[Music]
+#   comment = Music Folder
+#   path = /var/lib/mpd/music/
+#   read only = no
+#   public = yes
+#   follow symlinks = yes
+#   wide links = yes
 
 
 #[WebRadio]
@@ -66,9 +66,9 @@
 #   wide links = yes     
 
 #Development Shares
-#[www]
+[www]
    comment = Node root (/volumio)
-   path = /WebUI-NODE
+   path = /volumio
    read only = no
    public = yes
    follow symlinks = yes
