Added Development Utilities

--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -18,19 +18,19 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Net]
-packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools
+packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools telnet 
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool curl ca-certificates ntp
+packages=nano psmisc git wget ethtool curl ca-certificates ntp build-essential
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
 
 [FS]
-packages=samba cifs-utils ntfs-3g dosfstools exfat-utils
+packages=samba cifs-utils ntfs-3g dosfstools exfat-utils samba
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
