Adding Spotify dependencies

--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -40,3 +40,11 @@ packages=libasound2 alsa-utils sox sqlite3 mpd
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
+
+[Spotify]
+packages=libao-dev libglib2.0-dev libjson-glib-1.0-0 libjson-glib-dev libao-common libasound2-dev libreadline-dev
+source=http://archive.raspbian.org/raspbian
+keyring=debian-archive-keyring
+suite=jessie
+
+
