Adding DEV tools

--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -24,7 +24,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool curl ca-certificates ntp build-essential
+packages=nano psmisc git wget ethtool curl ca-certificates ntp
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
@@ -43,6 +43,12 @@ suite=jessie
 
 [Spotify]
 packages=libao-dev libglib2.0-dev libjson-glib-1.0-0 libjson-glib-dev libao-common libasound2-dev libreadline-dev
+source=http://archive.raspbian.org/raspbian
+keyring=debian-archive-keyring
+suite=jessie
+
+[Dev Tools]
+packages=build-essential cmake 
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
