Fixed packages configuration

--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS
+debootstrap=Base Net Utils Assets FS Spotify DevTools
 aptsources=Debian
 cleanup=true
 arch=armhf
@@ -47,7 +47,7 @@ source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
 
-[Dev Tools]
+[DevTools]
 packages=build-essential cmake 
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
