--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -42,7 +42,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Spotify]
-packages=libao-dev libglib2.0-dev libjson-glib-1.0-0 libjson-glib-dev libao-common libasound2-dev libreadline-dev libsox-dev libsoup2.4-dev libsoup2.4-1 dbus-glib-1
+packages=libao-dev libglib2.0-dev libjson-glib-1.0-0 libjson-glib-dev libao-common libasound2-dev libreadline-dev libsox-dev libsoup2.4-dev libsoup2.4-1
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
