Fix ping package and root partition size

--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -18,7 +18,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Net]
-packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools telnet ping
+packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools telnet
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
