--- a/conf/minimal.conf
+++ b/conf/minimal.conf
@@ -5,7 +5,7 @@ debootstrap=Base Net Utils Assets FS Spotify DevTools
 aptsources=Debian
 cleanup=true
 arch=armhf
-directory=build/root
+directory=build/arm/root
 retainsources=/build/root/packages
 allowrecommends=false
 addimportant=false
