Successfully building X86 RootFS

--- a/recipes/x86-dev.conf
+++ b/recipes/x86-dev.conf
@@ -36,7 +36,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils sox sqlite3 mpd
+packages=libasound2 alsa-utils sox sqlite3 mpd rlwrap
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
