--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -17,6 +17,13 @@ source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
+[Kernel]
+packages=linux-image-rt-686-pae
+source=http://ftp.nl.debian.org/debian
+keyring=debian-archive-keyring
+suite=wheezy
+
+
 [Net]
 packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools telnet
 source=http://ftp.nl.debian.org/debian
