--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -31,7 +31,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool curl ca-certificates ntp
+packages=nano psmisc git wget ethtool curl ca-certificates ntp rpl
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
