Added Avahi and ZeroConf

--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -24,7 +24,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool curl ca-certificates ntp
+packages=nano psmisc git wget ethtool curl ca-certificates ntp avahi-daemon avahi-discover libnss-mdns
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
@@ -36,7 +36,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils sox sqlite3 mpd
+packages=libasound2 alsa-utils sox sqlite3 mpd pulseaudio
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
