--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -31,7 +31,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool curl ca-certificates ntp rpl
+packages=nano psmisc git wget ethtool curl ca-certificates ntp rpl avahi-daemon avahi-discover libnss-mdns
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
@@ -43,7 +43,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils sox sqlite3 mpd rlwrap
+packages=libasound2 alsa-utils sox sqlite3 mpd rlwrap pulseaudio libupnp6 libmpdclient2 libexpat1 libcurl3
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
