--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -36,7 +36,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils sox sqlite3 mpd pulseaudio libupnp6 libmpdclient2 libexpat1 libcurl3
+packages=libasound2 alsa-utils sox sqlite3 mpd  mpc pulseaudio libupnp6 libmpdclient2 libexpat1 libcurl3
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
