--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -43,7 +43,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils sox sqlite3 mpd mpc rlwrap pulseaudio libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd10
+packages=libasound2 alsa-utils sox sqlite3 mpd mpc rlwrap pulseaudio libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd10 libexpat1
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
