--- a/recipes/x86-dev.conf
+++ b/recipes/x86-dev.conf
@@ -54,7 +54,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [DevTools]
-packages=build-essential cmake dh-autoreconf
+packages=build-essential cmake dh-autoreconf subversion
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
