--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -48,7 +48,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [DevTools]
-packages=build-essential cmake dh-autoreconf
+packages=build-essential cmake dh-autoreconf subversion
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
