--- a/recipes/x86-dev.conf
+++ b/recipes/x86-dev.conf
@@ -24,7 +24,7 @@ keyring=debian-archive-keyring
 suite=wheezy
 
 [Net]
-packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant
+packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
