--- a/volumio/etc/mpd.conf
+++ b/volumio/etc/mpd.conf
@@ -42,6 +42,15 @@ audio_output {
 	name		"alsa"
 	device		"hw:0,0"				
 }
+
+audio_output {
+    type            "fifo"
+    enabled         "no"
+    name            "multiroom"
+    path            "/tmp/snapfifo" 
+    format          "44100:16:2"
+} 
+
 samplerate_converter "soxr very high"
 #replaygain			"album"
 #replaygain_preamp		"0"
