--- a/recipes/arm-dev.conf
+++ b/recipes/arm-dev.conf
@@ -36,7 +36,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils sox sqlite3 mpd
+packages=libasound2 alsa-utils alsa-base sox sqlite3 mpd
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
