--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -31,7 +31,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool curl ca-certificates ntp rpl avahi-daemon avahi-discover libnss-mdns
+packages=nano psmisc git wget ethtool curl ca-certificates ntp rpl avahi-daemon avahi-discover libnss-mdns zsync
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
@@ -43,7 +43,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils alsa-base sox sqlite3 mpd mpc rlwrap libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd10 libexpat1 libboost-program-options1.55.0 libboost-system1.55.0
+packages=libasound2 alsa-utils alsa-base sox sqlite3 mpd mpc rlwrap libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd10 libexpat1 libboost-program-options1.55.0 libboost-system1.55.0 libconfig-dev
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
