--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -55,7 +55,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [DevTools]
-packages=build-essential cmake dh-autoreconf subversion
+packages=build-essential cmake dh-autoreconf subversion vi vim
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
