--- a/volumio/etc/mpd.conf
+++ b/volumio/etc/mpd.conf
@@ -19,7 +19,7 @@ bind_to_address		"any"
 #gapless_mp3_playback			"yes"
 #save_absolute_paths_in_playlists	"no"
 #metadata_to_use	"artist,album,title,track,name,genre,date,composer,performer,disc"
-#auto_update    "yes"
+auto_update    "yes"
 #auto_update_depth "3"
 ###############################################################################
 # Symbolic link behavior ######################################################
@@ -28,12 +28,12 @@ follow_inside_symlinks		"yes"
 ###############################################################################
 # Input #######################################################################
 #
-#input {
+input {
 #        plugin "curl"
 #       proxy "proxy.isp.com:8080"
 #       proxy_user "user"
 #       proxy_password "password"
-#}
+}
 ###############################################################################
 
 # Audio Output ################################################################
