--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -48,7 +48,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [DevTools]
-packages=build-essential cmake dh-autoreconf subversion vi vim
+packages=build-essential cmake dh-autoreconf subversion vim
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
