--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -37,7 +37,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [FS]
-packages=samba cifs-utils ntfs-3g dosfstools exfat-utils
+packages=samba cifs-utils ntfs-3g dosfstools exfat-utils nfs-common
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
