--- a/volumio/etc/mpd.conf
+++ b/volumio/etc/mpd.conf
@@ -29,7 +29,7 @@ follow_inside_symlinks		"yes"
 # Input #######################################################################
 #
 input {
-#        plugin "curl"
+        plugin "curl"
 #       proxy "proxy.isp.com:8080"
 #       proxy_user "user"
 #       proxy_password "password"
