--- a/volumio/etc/mpd.conf
+++ b/volumio/etc/mpd.conf
@@ -72,7 +72,7 @@ max_connections			"20"
 ###############################################################################
 
 # Character Encoding ##########################################################
-filesystem_charset		"UTF-8"
+filesystem_charset		"ISO-8859-1"
 id3v1_encoding			"UTF-8"
 ###############################################################################
 
