--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Spotify DevTools
+debootstrap=Base Net Utils Assets FS Spotify Firmware DevTools
 aptsources=Debian
 cleanup=true
 arch=armhf
@@ -18,7 +18,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Net]
-packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev firmware-realtek firmware-ralink firmware-atheros netplug
+packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev netplug
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
@@ -53,4 +53,10 @@ source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
 
+[Firmware]
+packages=firmware-atheros firmware-ralink firmware-realtek
+source=http://ftp.uk.debian.org/debian
+keyring=debian-archive-keyring
+components=main non-free
+suite=jessie
 
