Fix for the PI ARMv6 boot problems

--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -55,7 +55,7 @@ suite=jessie
 
 [Firmware]
 packages=firmware-atheros firmware-ralink firmware-realtek
-source=http://ftp.uk.debian.org/debian
+source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 components=main non-free
 suite=jessie
