--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -24,7 +24,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool curl ca-certificates ntp avahi-daemon avahi-discover libnss-mdns zsync
+packages=nano psmisc git wget ethtool curl ca-certificates ntp avahi-daemon avahi-discover libnss-mdns zsync git-core binutils ca-certificates curl busybox parted
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
@@ -59,4 +59,3 @@ source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 components=main non-free
 suite=jessie
-
