--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Spotify DevTools Kernel 
+debootstrap=Base Net Utils Assets FS Spotify DevTools Kernel
 aptsources=Debian
 cleanup=true
 arch=i386
@@ -31,7 +31,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool curl ca-certificates ntp rpl avahi-daemon avahi-discover libnss-mdns zsync
+packages=nano psmisc git wget ethtool curl ca-certificates ntp rpl avahi-daemon avahi-discover libnss-mdns zsync git-core binutils ca-certificates curl busybox parted
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
@@ -59,5 +59,3 @@ packages=build-essential cmake dh-autoreconf subversion vim
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
-
-
