--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Spotify Firmware DevTools
+debootstrap=Base Net Utils Assets FS Spotify
 aptsources=Debian
 cleanup=true
 arch=armhf
@@ -12,19 +12,19 @@ addimportant=false
 omitrequired=false
 
 [Base]
-packages=acl adduser dmsetup insserv libaudit-common libaudit1 libbz2-1.0 libcap2 libcap2-bin libcryptsetup4 libdb5.3 libdebconfclient0 libdevmapper1.02.1 libgcrypt20 libgpg-error0 libkmod2 libncursesw5 libprocps3 libsemanage-common libsemanage1 libslang2 systemd libsystemd0 libudev1 libustr-1.0-1 procps udev debian-archive-keyring gnupg gpgv libapt-pkg4.12 libreadline6 libstdc++6 libusb-0.1-4 readline-common acl adduser base-files base-passwd bash bsdutils coreutils debconf debconf-i18n debianutils diffutils dmsetup dpkg e2fslibs e2fsprogs findutils gcc-4.8-base gcc-4.9-base grep gzip hostname init initscripts insserv libacl1 libattr1 libaudit-common libaudit1 libblkid1 libbz2-1.0 libc-bin libc6 libcap2 libcap2-bin libcomerr2 libcryptsetup4 libdb5.3 libdebconfclient0 libdevmapper1.02.1 libgcc1 libgcrypt20 libgpg-error0 libkmod2 liblocale-gettext-perl liblzma5 libmount1 libncurses5 libncursesw5 libpam-modules libpam-modules-bin libpam-runtime libpam0g libpcre3 libprocps3 libselinux1 libsemanage-common libsemanage1 libsepol1 libslang2 libsmartcols1 libss2 libsystemd0 libtext-charwidth-perl libtext-iconv-perl libtext-wrapi18n-perl libtinfo5 libudev1 libustr-1.0-1 libuuid1 login lsb-base mawk mount multiarch-support ncurses-base ncurses-bin passwd perl-base procps sed startpar tar tzdata udev util-linux zlib1g apt debian-archive-keyring gnupg gpgv libapt-pkg4.12 libreadline6 libstdc++6 libusb-0.1-4 readline-common sudo dbus
+packages=busybox acl dmsetup insserv libbz2-1.0 libcap2 libcap2-bin libdebconfclient0 libdevmapper1.02.1 libgpg-error0 libprocps3 libsemanage-common libsemanage1 systemd libsystemd0 libudev1 procps udev debian-archive-keyring gnupg gpgv libapt-pkg4.12 libreadline6 libstdc++6 libusb-0.1-4 readline-common acl base-files base-passwd bash debconf debconf-i18n debianutils e2fslibs e2fsprogs gcc-4.8-base gcc-4.9-base initscripts insserv libacl1 libattr1 libaudit-common libaudit1 libblkid1 libbz2-1.0 libc-bin libc6 libcomerr2 libcryptsetup4 libdb5.3 libgcc1 libgcrypt20 libgpg-error0 libkmod2 liblocale-gettext-perl liblzma5 libmount1 libncurses5 libncursesw5 libpam-modules libpam-modules-bin libpam-runtime libpam0g libpcre3 libprocps3 libselinux1  libsepol1 libslang2 libsmartcols1 libss2 libsystemd0 libtext-charwidth-perl libtext-iconv-perl libtext-wrapi18n-perl libtinfo5 libudev1 libustr-1.0-1 libuuid1 lsb-base mawk multiarch-support ncurses-base ncurses-bin perl-base procps startpar tzdata udev util-linux zlib1g apt sudo
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
 
 [Net]
-packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev netplug
+packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool curl ca-certificates ntp avahi-daemon avahi-discover libnss-mdns zsync git-core binutils ca-certificates curl busybox parted
+packages=nano psmisc git ethtool curl ca-certificates ntp git-core parted
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
@@ -36,7 +36,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils alsa-base sox sqlite3 mpd mpc libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd10 libexpat1 libboost-program-options1.55.0 libboost-system1.55.0 libconfig-dev
+packages=libasound2 alsa-utils alsa-base sox sqlite3 mpd
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
@@ -48,14 +48,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [DevTools]
-packages=build-essential cmake dh-autoreconf subversion vim
+packages=build-essential cmake dh-autoreconf subversion binutils
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
-suite=jessie
-
-[Firmware]
-packages=firmware-atheros firmware-ralink firmware-realtek
-source=http://archive.raspbian.org/raspbian
-keyring=debian-archive-keyring
-components=main non-free
 suite=jessie
