--- a/volumio/etc/modprobe.d/alsa-base.conf
+++ b/volumio/etc/modprobe.d/alsa-base.conf
@@ -8,19 +8,20 @@ install sound-slot-5 /sbin/modprobe snd-card-5
 install sound-slot-6 /sbin/modprobe snd-card-6
 install sound-slot-7 /sbin/modprobe snd-card-7
 # Cause optional modules to be loaded above generic modules
-install snd /sbin/modprobe --ignore-install snd && { /sbin/modprobe --quiet snd-ioctl32 ; /sbin/modprobe --quiet snd-seq ; }
+install snd /sbin/modprobe --ignore-install snd && { /sbin/modprobe --quiet snd-ioctl32 ; /sbin/modprobe --quiet snd-seq ; : ; }
 install snd-rawmidi /sbin/modprobe --ignore-install snd-rawmidi && { /sbin/modprobe --quiet snd-seq-midi ; : ; }
 install snd-emu10k1 /sbin/modprobe --ignore-install snd-emu10k1 && { /sbin/modprobe --quiet snd-emu10k1-synth ; : ; }
-
-# Assign USB Audio as default sound card
-options snd_usb_audio index=-1
-
+# Keep snd-pcsp from beeing loaded as first soundcard
+options snd-pcsp index=-2
+# Keep snd-usb-audio from beeing loaded as first soundcard
+#options snd-usb-audio index=-2
 # Prevent abnormal drivers from grabbing index 0
 options bt87x index=-2
 options cx88_alsa index=-2
 options snd-atiixp-modem index=-2
 options snd-intel8x0m index=-2
 options snd-via82xx-modem index=-2
-# Keep snd-pcsp from beeing loaded as first soundcard
-options snd-pcsp index=-2
-
+# USB nrpacks option is deprecated, keeping for reference
+# options snd-usb-audio nrpacks=1
+options snd-usb-audio index=0
+ 
