Migrated x86 build to support auto-resize, update from usb and overlayfs

--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Spotify DevTools Kernel
+debootstrap=Base Net Utils Assets FS Spotify DevTools
 aptsources=Debian
 cleanup=true
 arch=i386
@@ -55,7 +55,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [DevTools]
-packages=build-essential cmake dh-autoreconf subversion vim
+packages=build-essential cmake dh-autoreconf subversion vim initramfs-tools
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
