--- a/volumio/etc/dhcp/dhclient.conf
+++ b/volumio/etc/dhcp/dhclient.conf
@@ -25,9 +25,9 @@ request subnet-mask, broadcast-address, time-offset, routers,
 	netbios-name-servers, netbios-scope, interface-mtu,
 	rfc3442-classless-static-routes, ntp-servers;
 #require subnet-mask, domain-name-servers;
-timeout 10;
+#timeout 60;
 #retry 60;
-#reboot 10;
+#reboot 30;
 #select-timeout 5;
 #initial-interval 2;
 #script "/etc/dhcp3/dhclient-script";
