--- a/recipes/arm64.conf
+++ b/recipes/arm64.conf
@@ -24,7 +24,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc ethtool curl ca-certificates ntp git-core parted wget avahi-daemon avahi-discover libnss-mdns zsync
+packages=nano psmisc ethtool curl ca-certificates ntp git-core parted wget avahi-daemon avahi-discover libnss-mdns zsync udisks udisks-glue
 source=http://ftp.ch.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
