--- a/volumio/etc/udisks-glue.conf
+++ b/volumio/etc/udisks-glue.conf
@@ -1,12 +1,42 @@
-filter disks {
-    optical = false
-    partition_table = false
-    usage = filesystem
+filter ntfs-partitions {
+	optical = false
+	partition_table = false
+	usage = filesystem
+	type = ntfs
 }
 
-match disks {
+filter vfat-partitions {
+	optical = false
+	partition_table = false
+	usage = filesystem
+	type = vfat
+}
+
+filter other-partitions {
+	optical = false
+	partition_table = false
+	usage = filesystem
+}
+
+match ntfs-partitions {
     automount = true
     automount_options = { sync, noatime, "dmask=0000", "fmask=0000" }
+    post_mount_command = "/usr/bin/mpc update USB"
+    post_unmount_command = "/usr/bin/mpc update USB"
+    post_removal_command = "/usr/bin/mpc update USB"
+}
+
+match vfat-partitions {
+    automount = true
+    automount_options = { sync, noatime, "dmask=0000", "fmask=0000" }
+    post_mount_command = "/usr/bin/mpc update USB"
+    post_unmount_command = "/usr/bin/mpc update USB"
+    post_removal_command = "/usr/bin/mpc update USB"
+}
+
+match other-partitions {
+    automount = true
+    automount_options = { sync, noatime }
     post_mount_command = "/usr/bin/mpc update USB"
     post_unmount_command = "/usr/bin/mpc update USB"
     post_removal_command = "/usr/bin/mpc update USB"
