Exclude Volumio Data from Automount

--- a/volumio/etc/udisks-glue.conf
+++ b/volumio/etc/udisks-glue.conf
@@ -1,3 +1,7 @@
+filter volumio-data {
+        label = volumio_data
+}
+
 filter ntfs-partitions {
 	optical = false
 	partition_table = false
@@ -16,6 +20,10 @@ filter other-partitions {
 	optical = false
 	partition_table = false
 	usage = filesystem
+}
+
+match volumio-data {
+        automount = false
 }
 
 match ntfs-partitions {
