Fixes usb audio crash and hiccups

--- a/volumio/etc/modprobe.d/alsa-base.conf
+++ b/volumio/etc/modprobe.d/alsa-base.conf
@@ -21,4 +21,5 @@ options cx88_alsa index=-2
 options snd-atiixp-modem index=-2
 options snd-intel8x0m index=-2
 options snd-via82xx-modem index=-2
+options snd-usb-audio nrpacks=1
  
