--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Spotify Firmware
+debootstrap=Base Net Utils Assets FS Firmware
 aptsources=Debian
 cleanup=true
 arch=armhf
