--- a/recipes/arm64.conf
+++ b/recipes/arm64.conf
@@ -30,7 +30,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [FS]
-packages=samba cifs-utils ntfs-3g dosfstools exfat-utils nfs-common exfat-fuse
+packages=samba cifs-utils ntfs-3g dosfstools exfat-utils nfs-common exfat-fuse nfs-common
 source=http://ftp.ch.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
