Wireless firmwares for wi-fi

--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Spotify DevTools
+debootstrap=Base Net Utils Assets FS Spotify DevTools Firmware
 aptsources=Debian
 cleanup=true
 arch=i386
@@ -58,4 +58,11 @@ suite=jessie
 packages=build-essential cmake dh-autoreconf subversion vim initramfs-tools
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
+suite=jessie
+
+[Firmware]
+packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211 firmware-iwlwifi intel-microcode firmware-linux
+source=http://ftp.nl.debian.org/debian
+keyring=debian-archive-keyring
+components=main non-free
 suite=jessie
