small correction with data path comment
correct the path for /data

--- a/volumio/etc/samba/smb.conf
+++ b/volumio/etc/samba/smb.conf
@@ -59,7 +59,7 @@
 #   wide links = yes
 
 #[data]
-#   comment = Data directory (/var/lib/mpd/)
+#   comment = Data directory (/data)
 #   path = /data
 #   read only = no
 #   public = yes
