Added wins name resolution

--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -30,7 +30,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [FS]
-packages=samba cifs-utils ntfs-3g dosfstools exfat-utils nfs-common exfat-fuse nfs-common smbclient
+packages=samba cifs-utils ntfs-3g dosfstools exfat-utils nfs-common exfat-fuse nfs-common smbclient winbind
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
