Newe samba conf file

--- a/volumio/etc/samba/smb.conf
+++ b/volumio/etc/samba/smb.conf
@@ -1,67 +1,10 @@
-#======================= Global Settings =======================
-
 [global]
+netbios name = Volumio
+workgroup = WORKGROUP
+security = user
+encrypt passwords = yes
+wins support = yes
+local master = yes
+preferred master = no
+os level = 30
 
-   netbios name = Volumio
-   workgroup = WORKGROUP
-   server string = Volumio Audio Player
-   dns proxy = no
-   log level = 0
-   syslog = 0
-
-#   security = share
-   guest account = root
-   map to guest = bad user
-   #map untrusted to domain = yes
-   load printers = no
-   domain master = no
-   local master = no
-   preferred master = no
-   
-
-#======================= Share Definitions =======================
-
-   directory mask = 0775
-   create mask = 0775
-
-[USB]
-   comment = USB Music Folder
-   path = /mnt/USB
-   read only = no
-   public = yes
-   follow symlinks = yes
-   wide links = yes
-
-
-[NAS]
-   comment = NAS Music Folder
-   path = /mnt/NAS
-   read only = no
-   public = yes
-   follow symlinks = yes
-   wide links = yes
-
-#Development Shares
-#[Volumio Folder]
-#   comment = Node root (/volumio)
-#   path = /volumio
-#   read only = no
-#   public = yes
-#   follow symlinks = yes
-#   wide links = yes
-
-#[etc]
-#   comment = OS Config directory (/etc)
-#   path = /etc
-#   read only = no
-#   public = yes
-#   follow symlinks = yes
-#   wide links = yes
-
-#[data]
-#   comment = Data directory (/var/lib/mpd/)
-#   path = /data
-#   read only = no
-#   public = yes
-#   follow symlinks = yes
-#   wide links = yes
