--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -30,7 +30,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [FS]
-packages=samba cifs-utils ntfs-3g dosfstools exfat-utils nfs-common exfat-fuse smbclient winbind libnss-winbind libpam-winbind
+packages= cifs-utils ntfs-3g dosfstools exfat-utils nfs-common exfat-fuse smbclient samba
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
