--- a/volumio/etc/samba/smb.conf
+++ b/volumio/etc/samba/smb.conf
@@ -1,10 +1,19 @@
+
 [global]
 netbios name = Volumio
+server string = Volumio Audiophile Music Player
 workgroup = WORKGROUP
 security = user
+map to guest = Bad User
 encrypt passwords = yes
 wins support = yes
 local master = yes
 preferred master = no
 os level = 30
+
+[Internal Storage]
+        comment = Volumio Internal Music Folder
+        path = /mnt/INTERNAL
+        read only = no
+        guest ok = yes
 
