Internal storage on /data partition

--- a/volumio/etc/samba/smb.conf
+++ b/volumio/etc/samba/smb.conf
@@ -13,7 +13,7 @@ os level = 30
 
 [Internal Storage]
         comment = Volumio Internal Music Folder
-        path = /mnt/INTERNAL
+        path = /data/INTERNAL
         read only = no
         guest ok = yes
 
