--- a/volumio/lib/systemd/system/hotspot.service
+++ b/volumio/lib/systemd/system/hotspot.service
@@ -4,6 +4,7 @@ Wants=dnsmasq.service
 [Service]
 Type=idle
 ExecStart=/bin/hotspot.sh
+ExecStop=/usr/bin/killall hostapd && /usr/bin/killall dhcpd
 KillMode=mixed
 Restart=no
 StandardOutput=syslog
