--- a/volumio/lib/systemd/system/hotspot.service
+++ b/volumio/lib/systemd/system/hotspot.service
@@ -3,8 +3,8 @@ Wants=dhcpd.service
 Wants=dnsmasq.service
 [Service]
 Type=idle
-ExecStart=/bin/hotspot.sh
-ExecStop=/usr/bin/killall hostapd && /usr/bin/killall dhcpd
+ExecStart=/bin/hotspot.sh start
+ExecStop=/bin/hotspot.sh stop
 KillMode=mixed
 Restart=no
 StandardOutput=syslog
