--- a/volumio/lib/systemd/system/dhclient.service
+++ b/volumio/lib/systemd/system/dhclient.service
@@ -4,5 +4,5 @@ BindsTo=wireless.service
 
 [Service]
 Type=forking
-ExecStart=/sbin/dhclient -v -nw -w wlan0
+ExecStart=/sbin/dhclient -v -nw -w
 KillMode=mixed
