--- a/volumio/etc/samba/smb.conf
+++ b/volumio/etc/samba/smb.conf
@@ -6,7 +6,7 @@ security = user
 map to guest = Bad User
 encrypt passwords = yes
 wins support = yes
-local master = yes
+local master = no
 preferred master = no
 os level = 30
 
