Remove dev tools and spotify

--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Spotify DevTools Firmware
+debootstrap=Base Net Utils Assets FS Firmware
 aptsources=Debian
 cleanup=true
 arch=i386
