--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -25,7 +25,7 @@ suite=jessie
 
 
 [Net]
-packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev netplug iw ethtool wireless-regdb crda
+packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev netplug iw ethtool wireless-regdb crda dnsmasq isc-dhcp-server hostapd
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
