--- a/volumio/lib/systemd/system/volumio.service
+++ b/volumio/lib/systemd/system/volumio.service
@@ -7,6 +7,7 @@ SyslogIdentifier=volumio
 User=volumio
 Group=volumio
 Environment=NODE_ENV=production
+Wants=dynamicswap.service
 
 [Install]
 WantedBy=multi-user.target
