--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -18,7 +18,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Net]
-packages=netbase ifupdown iproute net-tools iptables isc-dhcp-client openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev netplug iw ethtool wireless-regdb crda dnsmasq isc-dhcp-server hostapd
+packages=netbase ifupdown iproute net-tools iptables dhcpcd5 openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev netplug iw ethtool wireless-regdb crda dnsmasq isc-dhcp-server hostapd
 source=http://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
