--- a/volumio/lib/systemd/system/volumio.service
+++ b/volumio/lib/systemd/system/volumio.service
@@ -1,3 +1,8 @@
+[Unit]
+Description = Volumio Backend Module
+Wants=dynamicswap.service
+
+
 [Service]
 ExecStart=/usr/local/bin/node /volumio/index.js
 Restart=always
@@ -7,7 +12,6 @@ SyslogIdentifier=volumio
 User=volumio
 Group=volumio
 Environment=NODE_ENV=production
-Wants=dynamicswap.service
 
 [Install]
 WantedBy=multi-user.target
