Fix samba local master

--- a/volumio/etc/samba/smb.conf
+++ b/volumio/etc/samba/smb.conf
@@ -6,8 +6,8 @@ security = user
 map to guest = Bad User
 encrypt passwords = yes
 wins support = yes
-local master = no
-preferred master = no
+local master = yes
+preferred master = yes
 os level = 30
 
 [Internal Storage]
