--- a/recipes/armv8-dev.conf
+++ b/recipes/armv8-dev.conf
@@ -31,7 +31,7 @@ suite=jessie
 
 [Utils]
 packages=nano psmisc ethtool curl ca-certificates ntp git-core parted wget avahi-daemon avahi-discover libnss-mdns zsync udisks udisks-glue policykit-1 less fake-hwclock usbutils locales localepurge haveged
-source= havegedhttp://httpredir.debian.org/debian
+source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
