--- a/volumio/etc/samba/smb.conf
+++ b/volumio/etc/samba/smb.conf
@@ -6,8 +6,8 @@ security = user
 map to guest = Bad User
 encrypt passwords = yes
 wins support = yes
-local master = yes
-preferred master = yes
+local master = no
+preferred master = no
 os level = 30
 
 [Internal Storage]
