Do not mount volumiodata partition

--- a/volumio/etc/udisks-glue.conf
+++ b/volumio/etc/udisks-glue.conf
@@ -2,6 +2,10 @@ filter volumio-data {
         label = volumio_data
 }
 
+filter volumiodata {
+        label = volumiodata
+}
+
 filter ntfs-partitions {
 	optical = false
 	partition_table = false
