djmount for upnp browsing

--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -43,7 +43,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils alsa-base sox sqlite3 mpd mpc rlwrap libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd10 libexpat1 libboost-program-options1.55.0 libboost-system1.55.0 libconfig-dev libjsoncpp0 python-requests
+packages=libasound2 alsa-utils alsa-base sox sqlite3 mpd mpc rlwrap libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd10 libexpat1 libboost-program-options1.55.0 libboost-system1.55.0 libconfig-dev libjsoncpp0 python-requests djmount
 source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
