USB and NAS via network

--- a/volumio/etc/samba/smb.conf
+++ b/volumio/etc/samba/smb.conf
@@ -15,3 +15,16 @@ os level = 30
         path = /data/INTERNAL
         read only = no
         guest ok = yes
+
+[USB]
+        comment = Volumio Internal Music Folder
+        path = /mnt/USB
+        read only = no
+        guest ok = yes
+
+[NAS]
+        comment = Volumio Internal Music Folder
+        path = /mnt/NAS
+        read only = no
+        guest ok = yes
+
