upnp conf in tmp

--- a/volumio/lib/systemd/system/upmpdcli.service
+++ b/volumio/lib/systemd/system/upmpdcli.service
@@ -4,7 +4,7 @@ After=syslog.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/upmpdcli -c /volumio/app/plugins/audio_interface/upnp/upmpdcli.conf
+ExecStart=/usr/bin/upmpdcli -c /tmp/upmpdcli.conf
 StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=volumio
