x86 build without build-essentials, vim and dh-autoreconf

--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS DevTools Firmware
+debootstrap=Base Net Utils Assets FS Tools Firmware
 aptsources=Debian
 cleanup=true
 arch=i386
@@ -54,8 +54,14 @@ source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
+[Tools]
+packages=subversion initramfs-tools xz-utils
+source=http://httpredir.debian.org/debian
+keyring=debian-archive-keyring
+suite=jessie
+
 [DevTools]
-packages=build-essential cmake dh-autoreconf subversion vim initramfs-tools
+packages=build-essential cmake dh-autoreconf vim
 source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
