Enable ffmpeg by default

--- a/volumio/etc/mpd.conf
+++ b/volumio/etc/mpd.conf
@@ -36,6 +36,17 @@ input {
 }
 ###############################################################################
 
+# Decoder ################################################################
+
+decoder {
+plugin "ffmpeg"
+enabled "yes"
+analyzeduration "1000000000"
+probesize "1000000000"
+}
+
+###############################################################################
+
 # Audio Output ################################################################
 audio_output {
 	type		"alsa"
