remove 30 seconds timeout

--- a/volumio/lib/systemd/system/dhcpcd.conf
+++ b/volumio/lib/systemd/system/dhcpcd.conf
@@ -3,7 +3,7 @@
 [Service]
 Type=forking
 ExecStartPre=-/usr/bin/sudo /usr/bin/killall dhcpcd
-ExecStart=/sbin/dhcpcd -t 30 -d
+ExecStart=/sbin/dhcpcd -d
 KillMode=mixed
 Restart=always
 StandardOutput=syslog
