adding autossh and xbindkeys

--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Firmware
+debootstrap=Base Net Utils Assets FS Firmware Accessories
 aptsources=Debian
 cleanup=true
 arch=armhf
@@ -52,4 +52,10 @@ packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211 fi
 source=http://archive.volumio.org/raspbian
 keyring=debian-archive-keyring
 components=main non-free
+suite=jessie
+
+[Accessories]
+packages=autossh xbindkeys
+source=http://archive.volumio.org/raspbian
+keyring=debian-archive-keyring
 suite=jessie
