--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Tools Firmware
+debootstrap=Base Net Utils Assets FS Tools Firmware Accessories
 aptsources=Debian
 cleanup=true
 arch=i386
@@ -71,4 +71,10 @@ packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211 fi
 source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 components=main non-free
+suite=jessie
+
+[Tools]
+packages=autossh xbindkeys
+source=http://httpredir.debian.org/debian
+keyring=debian-archive-keyring
 suite=jessie
