--- a/recipes/armv7.conf
+++ b/recipes/armv7.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware
+debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware Accessories
 aptsources=Debian
 cleanup=true
 arch=armhf
@@ -52,4 +52,10 @@ packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211 fi
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 components=main non-free
+suite=jessie
+
+[Accessories]
+packages=autossh xbindkeys
+source=http://ftp.nl.debian.org/debian
+keyring=debian-archive-keyring
 suite=jessie
