--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -73,7 +73,7 @@ keyring=debian-archive-keyring
 components=main non-free
 suite=jessie
 
-[Tools]
+[Accessories]
 packages=autossh xbindkeys
 source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
