--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -74,7 +74,7 @@ components=main non-free
 suite=jessie
 
 [Accessories]
-packages=autossh xbindkeys
+packages=autossh xbindkeys sg3-utils
 source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
