--- a/recipes/armv7.conf
+++ b/recipes/armv7.conf
@@ -55,7 +55,7 @@ components=main non-free
 suite=jessie
 
 [Accessories]
-packages=autossh xbindkeys
+packages=autossh xbindkeys sg3-utils
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
